WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243146
REGRESSION (
251189@main
): Photos in Facebook partially render on iOS
https://bugs.webkit.org/show_bug.cgi?id=243146
Summary
REGRESSION (251189@main): Photos in Facebook partially render on iOS
alan
Reported
2022-07-23 19:28:58 PDT
<
rdar://97346531
>
Attachments
Patch
(4.11 KB, patch)
2022-07-23 19:32 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(4.36 KB, patch)
2022-07-24 09:47 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-07-23 19:32:37 PDT
Created
attachment 461169
[details]
Patch
Sam Sneddon [:gsnedders]
Comment 2
2022-07-24 07:32:16 PDT
https://commits.webkit.org/251188@main
looks like the wrong commit?
alan
Comment 3
2022-07-24 09:38:08 PDT
(In reply to Sam Sneddon [:gsnedders] from
comment #2
)
>
https://commits.webkit.org/251188@main
looks like the wrong commit?
You are right, it's
251189@main
. Thanks!
alan
Comment 4
2022-07-24 09:47:22 PDT
Created
attachment 461178
[details]
Patch
EWS
Comment 5
2022-07-24 13:00:30 PDT
Committed
252767@main
(c5eba96097d7): <
https://commits.webkit.org/252767@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 461178
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug