Cherry-pick c5eba96097d7. rdar://problem/97346531

REGRESSION (251189@main): Photos in Facebook partially render on iOS
    https://bugs.webkit.org/show_bug.cgi?id=243146

    Unreviewed.

    This is a full revert of 251189@main (height: fill-available).

    * LayoutTests/TestExpectations:
    * Source/WebCore/rendering/RenderBox.cpp:
    (WebCore::RenderBox::computeIntrinsicLogicalContentHeightUsing const):

    Canonical link: https://commits.webkit.org/252767@main

Canonical link: https://commits.webkit.org/252432.79@safari-7614-branch